chore: configure jest import aliases

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "test": "jest --watchAll --passWithNoTests",
+    "test:coverage": "jest --watchAll --passWithNoTests --coverage",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
