--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.2",
+    "redux-saga": "^1.3.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5"
   },
