feat: add header; improve import and name files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
       "@assets/*": ["src/assets/*"],
       "@pages/*": ["src/pages/*"],
       "@state/*": ["src/state/*"],
+      "@utils/*": ["src/utils/*"],
     },
   },
   "include": ["**/*.js", "**/*.ts", "**/*.tsx", "**/*.json"],
