--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
       "@pages/*": ["src/pages/*"],
       "@state/*": ["src/state/*"],
       "@utils/*": ["src/utils/*"],
+      "@hook/*": ["src/hook/*"],
     },
   },
   "include": ["**/*.js", "**/*.ts", "**/*.tsx", "**/*.json"],
