--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.2",
+    "react-toastify": "^10.0.0",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5"
@@ -44,6 +45,7 @@
     "mockjs": "^1.1.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "vite": "^5.0.8",
     "vite-plugin-mock": "^3.0.1"
   },
