--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mockjs": "^1.1.0",
+    "prettier": "3.2.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
