--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mockjs": "^1.1.0",
-    "prettier": "3.2.4",
+    "prettier": "^3.2.4",
+    "pretty-quick": "^4.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
