--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc && vite build",
     "test": "jest --watchAll --passWithNoTests",
     "test:coverage": "jest --watchAll --passWithNoTests --coverage",
+    "prepare": "husky install",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -42,8 +43,11 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "git-commit-msg-linter": "^5.0.6",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
     "mockjs": "^1.1.0",
     "prettier": "^3.2.4",
     "pretty-quick": "^4.0.0",
